     * Fixed bug #22800: Cloaked Figure appears in strange location.
     * Fixed bug #22799: No allies killed by enemy reinforcements.
     * Fixed bug #22790: Various problems with dehydration.
     * Hide unit variations that should not be listed in the help browser.
 * C++ Engine:
   * Purge "human_ai" controller type. This is a fixup of bugfix #18829 below.
 * Editor:
   * Added an entry for the terrain description help to the context menu.
   * Default hotkey bindings for brushes (1-5)
   * Disabled the swap palette button when the unit palette is active.
   * Disabled the tod schedule and playlist menues in pure map mode.
   * Support for displaying the saved status of the selected area.
   * Fixed error messages about missing UI elements.
   * Fixed falcon race missing an icon due to having incorrectly-named image
     files.
 * Graphics:
   * New Ancient Lich baseframe and animations
   * New stand animations (NE and SE) for the Revenant
   * Smooth unit movement over terrain with elevation (e.g. keeps/bridges)
   * Fixed bug #22045: Only blit neutral surfaces.
   * [item] images are now subject to local ToD lighting effects instead of
     just the current map-wide ToD lighting (bug #22215).
   * Disabled "alpha thresholding" in the bilinear interpolation algorithm
     used for all sprites and images. (This was introduced as a workaround
     for an old bug.)
   * Add a new bilinear interpolation implementation, which properly performs
     alpha weighting when averaging colors, and rename old one as the legacy
     version.
 * Help browser:
   * Added trait list with links to the help page for unit types
   * Added "Defense Capped" column with notification in the "terrain modifiers table"
     in the unit help page, for when a defense rating is negative. The column is
     only added for units with at least one negative rating, and includes a link to an explanation.