@@ -91,6 +91,7 @@ Version 1.13.0-dev:
      * Hide unit variations that should not be listed in the help browser.
  * C++ Engine:
    * Purge "human_ai" controller type. This is a fixup of bugfix #18829 below.
+   * Move expected damage calculation into each strike (bug #23108 below).
  * Editor:
    * Added an entry for the terrain description help to the context menu.
    * Default hotkey bindings for brushes (1-5)
@@ -371,6 +372,7 @@ Version 1.13.0-dev:
    * Added 'faction_lock' and 'leader_lock' to SideWML to be used in MP Connect
      screen. Fixes bug #21978.
    * Fix bug #22231: partial moves now able to be continued in whiteboard
+   * Fix bug #23108: exclucde aborted attacks from statistics
    * Added wmi_pager object to control how wml menu items are displayed in context menus, and allow
      to display more than seven.
    * Fix an inefficient implementation of unit::invisible, in an effort to address slow performance problems:
